[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/basic_node.png" type="Texture" id=1]
[ext_resource path="res://Computer.gd" type="Script" id=2]
[ext_resource path="res://textures/basic_uninfected.png" type="Texture" id=3]
[ext_resource path="res://Highlighter.tscn" type="PackedScene" id=4]
[ext_resource path="res://ColorSpinner.tscn" type="PackedScene" id=5]

[node name="computer" type="Node2D"]
script = ExtResource( 2 )

[node name="connector_tl" type="Node2D" parent="."]
position = Vector2( -57.5579, 26.3199 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.297302, -0.297302 )
scale = Vector2( 0.997027, 0.997027 )
texture = ExtResource( 1 )

[node name="color_spinner" parent="Sprite" instance=ExtResource( 5 )]

[node name="display_sprite" type="Sprite" parent="."]
position = Vector2( -59.3299, -49.265 )
scale = Vector2( 0.554329, 0.489517 )
texture = ExtResource( 3 )
centered = false
region_rect = Rect2( 0, 0, 120, 120 )

[node name="highlighter" parent="display_sprite" instance=ExtResource( 4 )]

[node name="util_tl" type="Node2D" parent="."]
position = Vector2( 44.2348, -45.3199 )
scale = Vector2( 0.5, 1 )
